--- a/views/admin/update-system.ejs
+++ b/views/admin/update-system.ejs
@@ -74,6 +74,13 @@
                             <i class="fas fa-info-circle me-2"></i>
                             <strong>Note :</strong> Le serveur va redémarrer automatiquement pour appliquer les changements.
                         </div>
+                        
+                        <% if (updateStatus.version) { %>
+                        <div class="alert alert-success mt-3">
+                            <i class="fas fa-tag me-2"></i>
+                            <strong>Nouvelle version :</strong> <%= updateStatus.version %>
+                        </div>
+                        <% } %>
                     <% } %>
                     
                     <% if (updateStatus.details) { %>
